Found a secure websocket implementation in erlang. Rewrote it to work with my db. All hail security.

--- a/relx.config
+++ b/relx.config
@@ -1,4 +1,2 @@
-{release, {mini_irc_release, "1"}, [mini_irc]}.
+{release, {wss_hs_db, "1"}, [wss]}.
 {extended_start_script, true}.
-{sys_config, "rel/sys.config"}.
-{vm_args, "rel/vm.args"}.
